# discord-forgejo-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  forgejo-discord-bot.py  pgadmin_servers.json  pyproject.toml
example/: Dockerfile  README.md  docker-compose.yml  echo_all_channels_bot.py  echo_bot.py
forgejo_discord_bot/: __init__.py  bot.py  cli.py  forgejo_api.py  webhook.py
forgejo_discord_bot/core/: __init__.py  bot.py
forgejo_discord_bot/database/: __init__.py  models.py
forgejo_discord_bot/discord/: __init__.py  commands.py  notifications.py
forgejo_discord_bot/forgejo/: __init__.py  api.py
forgejo_discord_bot/web/: __init__.py  webhook.py
scripts/: create_forgejo_user.py  init_channels.py
