[project]
name = "forgejo-discord-bot"
version = "0.1.0"
description = "Forgejoと連携するDiscord Bot"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "discord.py>=2.0.0",
    "aiohttp",
    "flask",
    "psycopg2-binary",
    "loguru",
    "python-dotenv"
]

[project.scripts]
fd-bot = "forgejo_discord_bot.cli:main"